# Projektcpp

./: CMakeLists.txt  ProjektCPP.rar  adminwindow.cpp  adminwindow.h  adminwindow.ui  assignstudentswindow.cpp  assignstudentswindow.h  assignstudentswindow.ui  employeeswindow.cpp  employeeswindow.h  employeeswindow.ui  employeewindow.cpp  employeewindow.h  employeewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  sms.db  sms.sqbpro  studentswindow.cpp  studentswindow.h  studentswindow.ui  studentwindow.cpp  studentwindow.h  studentwindow.ui  subjectswindow.cpp  subjectswindow.h  subjectswindow.ui
